@@ -24,7 +24,6 @@
 //  PARAM_HAS_IMAGEMAPS
 //  PARAM_HAS_PASSTHROUGH
 //  PARAM_USE_PIXEL_ATOMICS
-//  PARAM_HAS_BUMPMAPS
 //  PARAM_ACCEL_BVH or PARAM_ACCEL_MBVH or PARAM_ACCEL_QBVH or PARAM_ACCEL_MQBVH
 //  PARAM_LIGHT_WORLD_RADIUS_SCALE
 //  PARAM_TRIANGLE_LIGHT_HAS_VERTEX_COLOR
