@@ -114,6 +114,7 @@ extern std::string KernelSource_scene_funcs;
 extern std::string KernelSource_mapping_types;
 extern std::string KernelSource_mapping_funcs;
 extern std::string KernelSource_hitpoint_types;
+extern std::string KernelSource_hitpoint_funcs;
 extern std::string KernelSource_pgic_types;
 extern std::string KernelSource_pgic_funcs;
 
