@@ -250,7 +250,6 @@ OPENCL_FORCE_INLINE uint Material_GetExteriorVolume(const uint matIndex,
 // Material_Bump
 //------------------------------------------------------------------------------
 
-#if defined(PARAM_HAS_BUMPMAPS)
 OPENCL_FORCE_INLINE void Material_Bump(const uint matIndex, __global HitPoint *hitPoint
 	MATERIALS_PARAM_DECL) {
 	const uint bumpTexIndex = mats[matIndex].bumpTexIndex;
@@ -270,7 +269,6 @@ OPENCL_FORCE_INLINE void Material_Bump(const uint matIndex, __global HitPoint *h
 		VSTORE3F(dpdv, &hitPoint->dpdv.x);
 	}
 }
-#endif
 
 //------------------------------------------------------------------------------
 // Material_GetGlossiness
