@@ -40,12 +40,10 @@ OPENCL_FORCE_NOT_INLINE void Volume_InitializeTmpHitPoint(__global HitPoint *tmp
 	VSTORE3F(-rayDir, &tmpHitPoint->geometryN.x);
 	VSTORE3F(-rayDir, &tmpHitPoint->interpolatedN.x);
 	VSTORE3F(-rayDir, &tmpHitPoint->shadeN.x);
-#if defined(PARAM_HAS_BUMPMAPS)
 	VSTORE3F((float3)(0.f, 0.f, 0.f), &tmpHitPoint->dpdu.x);
 	VSTORE3F((float3)(0.f, 0.f, 0.f), &tmpHitPoint->dpdv.x);
 	VSTORE3F((float3)(0.f, 0.f, 0.f), &tmpHitPoint->dndu.x);
 	VSTORE3F((float3)(0.f, 0.f, 0.f), &tmpHitPoint->dndv.x);
-#endif
 #if defined(PARAM_ENABLE_TEX_HITPOINTCOLOR) || defined(PARAM_ENABLE_TEX_HITPOINTGREY) || defined(PARAM_TRIANGLE_LIGHT_HAS_VERTEX_COLOR)
 	VSTORE3F(WHITE, tmpHitPoint->color.c);
 #endif
