@@ -3,8 +3,8 @@ film.height = 480
 # Use a value > 0 to enable batch mode
 batch.halttime = 0
 scene.file = scenes/bigmonkey/bigmonkey-maparealight.scn
-opencl.cpu.use = 1
-opencl.gpu.use = 1
+#opencl.cpu.use = 1
+#opencl.gpu.use = 1
 # Select the OpenCL platform to use (0=first platform available, 1=second, etc.)
 #opencl.platform.index = 0
 # The string select the OpenCL devices to use (i.e. first "0" disable the first
@@ -14,13 +14,9 @@ opencl.gpu.use = 1
 # each OpenCL devices busy
 #opencl.renderthread.count = 2
 # Use a value of 0 to enable default value
-opencl.gpu.workgroup.size = 64
+#opencl.gpu.workgroup.size = 64
 screen.refresh.interval = 100
-path.maxdepth = 1
-path.russianroulette.depth = 5
-# BIASPATH settings
-tile.multipass.enable = 1
-biaspath.sampling.aa.size = 3
+path.pathdepth.total = 5
 # Film image pipeline plug-ins
 film.imagepipeline.0.type = TONEMAP_LINEAR
 film.imagepipeline.1.type = GAMMA_CORRECTION
